[package]
name = "approve-all-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.33.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
hex = "0.4.3"
parity-scale-codec = "3.6.5"
